--- a/work02/index.html
+++ b/work02/index.html
@@ -15,8 +15,8 @@
         <!-- เปิดเว็บค้นหา -->
         <a href="http://www.google.com" target="_blank">เปิดเว็บกูเกิ้ล</a> 
 
-        <a href="https://www.pinterest.com/" target="_blank"><img src="monet.jpg"></a>
-        
+        <a href="https://www.pinterest.com/" target="_blank"><img src="image/monet.jpg"></a>
+
         <h1>HTML5</h1>
     
 </body>
